Add browser-sync and use manifest to load scripts

--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-  <p>Hello {{ site.name }}</p>
+  <p class="hello">Hello {{ site.name }}</p>
 {% endblock %}
