--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,29 @@
-@import 'hello';
+// Configuration and helpers
+@import 'abstracts/variables';
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/placeholders';
+
+// Vendors
+@import 'vendors/normalize';
+
+// Base styling, such as fonts and utilities
+@import 'base/base';
+@import 'base/fonts';
+@import 'base/utilities';
+
+// Layout-related sections
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/grid';
+
+// Components
+@import 'components/button';
+@import 'components/dropdown';
+
+// Page-specific styles
+@import 'pages/home';
+@import 'pages/contact';
+
+// Themes
+@import 'themes/default';
