Fix first time rendering bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 // Components
 @import 'components/button';
 @import 'components/dropdown';
+@import 'components/hello-world';
 
 // Page-specific styles
 @import 'pages/home';
