--- a/src/templates/components/hello-world.ejs
+++ b/src/templates/components/hello-world.ejs
@@ -1,1 +1,1 @@
-<div class="js-hello-world" data-name="<%- site.name %>"></div>
+<div class="js-hello-world hello-world" data-name="<%- site.name %>"></div>
